# antidote

./: configure.ac
apps/: Makefile.am
sdk/: Makefile.am
src/: Makefile.am
src/api/: Makefile.am
src/communication/: Makefile.am
src/communication/parser/: Makefile.am
src/communication/plugin/: Makefile.am
src/communication/plugin/bluez/: Makefile.am
src/communication/plugin/trans/: Makefile.am
src/communication/plugin/usb/: Makefile.am
src/dim/: Makefile.am
src/specializations/: Makefile.am
src/trans/: Makefile.am
src/trans/plugin/: Makefile.am
src/util/: Makefile.am
tests/: Makefile.am
tests/api/: Makefile.am
tests/communication/: Makefile.am
tests/communication/encoder/: Makefile.am
tests/communication/parser/: Makefile.am
tests/dim/: Makefile.am
tests/functional_test_cases/: Makefile.am
